<resources>
    <string name="app_name">Google_Task</string>
    <string name="favourites_list">Favorites</string>
    <string name="my_task_list">My tasks</string>
    <string name="create_new_list">Create list</string>
    <string name="empty_list">You have not ane task</string>
    <string name="list_creator">Input list name</string>
    <string name="list_creator_menu_title">Creating list</string>
    <string name="task_creator_new_task">New task</string>
    <string name="task_creator_discription">Add additional information</string>
    <string name="task_creator_date">Add date</string>
    <string name="save">Save</string>
    <string name="list_creator_input_name">Input list name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="change_list_name">Rename lsit</string>
    <string name="delete_list">Delete list</string>
    <string name="completed_task">Congratulations you have completed the task</string>
</resources>