<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right"
    android:foregroundGravity="right"
    android:orientation="vertical"
    app:layout_anchorGravity="right|top">

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/task_creator_new_task"
        android:ems="10"
        android:hint="@string/task_creator_new_task"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editTextTaskDisription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/task_creator_discription"
        android:inputType="textPersonName"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/addDescriptionFrameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0">

            <ImageView
                android:id="@+id/addDescriptionImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_add_task_discription" />

            <Button
                android:id="@+id/addDescriptionButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/task_creator_discription" />

        </FrameLayout>

        <CheckBox
            android:id="@+id/checkBoxIsFavourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_baseline_star_24"
             />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="right|top"
            android:layout_weight="0"
            android:background="#00FFFFFF"
            android:clickable="false"
            android:foregroundGravity="top|right"
            android:gravity="right|center_vertical"
            android:text="@string/save"
            android:textColor="#686868"
            app:iconPadding="0dp" />

    </LinearLayout>
</LinearLayout>